Attempt at fixing scrollbar on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -127,7 +127,4 @@ footer .footer-heart:hover {
   footer .footer-heart {
     font-size: 0.95em;
   }
-  footer {
-    margin-bottom: 50px;
-  }
 }
